# ImmersifyNativePlugin

./: README.md
NativePlugin/: .gitignore
NativePlugin/ImmersifyCore/src/: Console.cpp  Decoder.cpp  DxTextureAccess.cpp  Sequencer.cpp  Timer.cpp  glInfo.cpp  glTextureAccess.cpp
NativePlugin/ImmersifyCore/src/Header/: BaseTextureAccess.h  Console.h  Decoder.h  DxTextureAccess.h  Sequencer.h  TextureFormats.h  Timer.h  Utils.h  glTextureAccess.h
NativePlugin/ImmersifyUnityPlayer/src/: ImmersifyUnityPlugin.cpp
NativePlugin/ImmersifyUnityPlayer/src/Unity/: IUnityGraphics.h  IUnityGraphicsD3D11.h  IUnityGraphicsD3D12.h  IUnityGraphicsD3D9.h
NativePlugin/ImmersifyUnityPlayer/src/Unity/Rendering/: PlatformBase.h  RenderAPI.cpp  RenderAPI.h  RenderAPI_D3D11.cpp  RenderAPI_D3D12.cpp  RenderAPI_D3D9.cpp  RenderAPI_OpenGL2.cpp  RenderAPI_OpenGLCore.cpp  RenderAPI_OpenGLCoreES.cpp
NativePlugin/libs/glew/include/GL/: glxext.h
NativePlugin/libs/glew/lib/: glew32sd.lib  glew64sd.lib
NativePlugin/libs/spinsdk/common/: AppUtils.h  BitstreamReader.cpp  BitstreamReader.h  StringUtils.h
NativePlugin/libs/spinsdk/include/: spinaudren.h  spincommon.h  spincommonstr.h  spincompare.h  spindec.h  spinenc.h  spinfilter.h  spinhevc.h  spinlicense.h  spinrawio.h  spinrender.h  spinretcodes.h  spinsei.h  spinstream.h
NativePlugin/libs/spinsdk/include/libavcodec/: avcodec.h
NativePlugin/libs/spinsdk/include/libavutil/: channel_layout.h
NativePlugin/libs/spinsdk/libs/windows_redist/: avcodec.lib  avformat.lib  avutil.lib  sntlcloudp_configuration_spindigitalvideotechnologiesgmbh.xml  spinlib_rms.lib  swresample.lib
NativePlugin/prj/: CMakeLists.txt
NativePlugin/visual studio 2015/settings/: CurrentSettings.vssettings
